--- a/index.html
+++ b/index.html
@@ -1,25 +1,48 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta charset="utf-8">
-		<title>SAPUI5 Walkthrough</title>
-		<script
-			id="sap-ui-bootstrap"
-			src="/resources/sap-ui-core.js"
-			data-sap-ui-theme="sap_bluecrystal"
-			data-sap-ui-modules="sap.m.library"
-			data-sap-ui-compatVersion="edge"
-			data-sap-ui-preload="async" >
-		</script>
-		<script>
-			sap.ui.getCore().attachInit(function () {
-				new sap.m.Text({
-					text : "OpenUI5 is loaded successfully!"
-				}).placeAt("content");
-			});
-		</script>
-	</head>
-	<body class="sapUiBody" id="content">
-	</body>
-</html>
+<!Doctype html> 
+<head> 
+
+</head>
+<body> 
+<a href="http://www.google.com">This is a link</a> 
+<picture><img src="Capture4.png"></picture>
+<p>
+This paragraph
+contains a lot of lines
+in the source code,
+but the browser
+ignores it.
+</p>
+<p>hello</p>
+<i>Lorem ipsum</i>
+<b>and this is bold text</b>
+<em>This text is emphasized</em>
+<u>This text will be underlined.</u>
+<sup>superscripted</sup>
+<sub>subscripted</sub>
+<h1>Heading 1</h1>
+<h2>Heading 2</h2>
+<h3>Heading 3</h3>
+<h4>Heading 4</h4>
+<h5>Heading 5</h5>
+<h6>Heading 6</h6>
+
+
+<table>
+  <tr>
+    <td>Firstname</td>
+    <td>Lastname</td>
+    <td>Age</td>
+  </tr>
+  <tr>
+    <td>Jill</td>
+    <td>Smith</td>
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+</table>
+</body> 
+</html> 
