--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,13 @@
 <!Doctype html> 
 <head> 
-
+<title>html</title>
 </head>
 <body> 
-<a href="http://www.google.com">This is a link</a> 
+<a class=gb1 href="https://news.google.com/?tab=wn">News</a> 
+<a class=gb1 href="https://mail.google.com/mail/?tab=wm">Gmail</a>
+<a href="mailto:community@VLR.gg" class="contact">Contact</a>
+ 
+<i>Lorem ipsum</i>
 <picture><img src="Capture4.png"></picture>
 <p>
 This paragraph
@@ -13,8 +17,10 @@ but the browser
 ignores it.
 </p>
 <p>hello</p>
-<i>Lorem ipsum</i>
+
+
 <b>and this is bold text</b>
+<p>its me</p>
 <em>This text is emphasized</em>
 <u>This text will be underlined.</u>
 <sup>superscripted</sup>
@@ -27,22 +33,5 @@ ignores it.
 <h6>Heading 6</h6>
 
 
-<table>
-  <tr>
-    <td>Firstname</td>
-    <td>Lastname</td>
-    <td>Age</td>
-  </tr>
-  <tr>
-    <td>Jill</td>
-    <td>Smith</td>
-    <td>50</td>
-  </tr>
-  <tr>
-    <td>Eve</td>
-    <td>Jackson</td>
-    <td>94</td>
-  </tr>
-</table>
 </body> 
 </html> 
